added Component annotation to fix method invoke exception